# AT_TEMPORAL_SOLVER

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
at_temporal_solver/: __main__.py
at_temporal_solver/core/: at_temporal_solver.py  component.py  timeline.py  wm.py
at_temporal_solver/evaluations/: allen.py  simple.py
src/at_temporal_solver/: __main__.py
src/at_temporal_solver/core/: at_temporal_solver.py  component.py
src/at_temporal_solver/evaluations/: simple.py
tests/: test_temporal_solver.py
