[tool.poetry]
name = "at-temporal-solver"
version = "1.0.2"
description = ""
authors = ["grigadnal625 <grigandal625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
at-krl = {git = "https://github.com/grigandal625/AT_KRL.git", rev = "master"}
at-queue = {git = "https://github.com/grigandal625/AT_QUEUE.git", rev = "master"}
at-solver = {git = "https://github.com/grigandal625/AT_SOLVER.git"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pre-commit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
